fixed spacing and missing text

--- a/styles.css
+++ b/styles.css
@@ -52,7 +52,7 @@ button {
 
 .modal {
     width: 80%;
-    height: 75%;
+    height: 80%;
     border-radius: 20px;
     background: white;
     position: fixed;
@@ -86,6 +86,7 @@ button {
 .top-container {
     width: 75%;
     margin: 0 auto;
+    padding: 2em 0 0;
 }
 
 .top-container p {
@@ -101,7 +102,7 @@ button {
     justify-content: center;
     gap: 5em;
     padding: 4em 5em;
-    margin: 1em 4em;
+    margin: 1em 4em 0;
 }
 
 .help-card-container {
@@ -150,9 +151,6 @@ label {
     font-size: 1.125rem;
 }
 
-.lop-header {
-}
-
 .lop-header-container {
     background: white;
     position: fixed;
@@ -163,11 +161,6 @@ label {
     text-align: center;
     border-top-left-radius: 20px;
     border-top-right-radius: 20px;
-}
-
-.overview-container {
-    margin-top: 43px;
-    display:flex;
 }
 
 .overview-img{
@@ -186,12 +179,26 @@ label {
 }
 
 .overview-container {
+    display: flex;
     margin-top: 100px;
-    padding:0px 100px;
+    padding: 20px 100px;
+    background: white;
 }
 
 .green{
     color:#01a852;
+}
+
+.grey {
+    color: rgb(150, 150, 150);
+}
+
+.all-letters-header {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 1em;
+    padding: 1em 0;
 }
 
 .list-number {
@@ -237,7 +244,7 @@ label {
 .all-letters-container{
     display:grid;
     gap:100px;
-    padding:100px;
+    padding: 0 100px 100px;
 }
 .lop-end-text{
     justify-self: center;
